dev_ops/jenkins/node.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: default # Ensure this matches the namespace of your Jenkins deployment
spec:
  selector:
    app: myjenkins # This should match the label of your Jenkins deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080 # Port Jenkins is running on
  type: LoadBalancer
