dev_ops/jenkins/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: test-app-27
  name: test-app-27
spec:
  ports:
  - name: 80-8080
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: test-app-27
  type: ClusterIP
status:
  loadBalancer: {}
